# braid

./: .gitignore  2026-06-08-braid-0.3.0-features-for-migration.md  CLAUDE.md  Cargo.toml  README.md  book.toml  install.ps1  install.sh  rustfmt.toml
.cargo/: config.toml
.claude/skills/braid-issue-tracking/: SKILL.md
.claude/skills/braid-release/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml  viewer.yml
claude-notes/plans/2026/06/03/: braid-design-kickoff.md
claude-notes/plans/2026/06/04/: braid-mcp.md  braid-rotate.md  defer-undefer.md  installer.md  minisign-signing.md  richer-list-filters.md  xtask-fmt.md
claude-notes/plans/2026/06/08/: agents-info-installer.md  create-deps.md  dep-tree.md  import-tombstones.md  windows-support.md
claude-notes/plans/2026/06/09/: config-source-provenance.md
claude-notes/plans/2026/06/11/: braid-ui.md
claude-notes/plans/2026/06/12/: braid-viewer-tauri.md
claude-notes/plans/2026/06/18/: docs-website.md  viewer-release-design.md  viewer-release-plan.md  viewer-roborev-1618-fixes.md
crates/braid/: Cargo.toml  build.rs
crates/braid-config/: Cargo.toml
crates/braid-config/src/: docid.rs  lib.rs  ui_config.rs  viewer.rs
crates/braid-config/tests/: ui_config.rs  viewer.rs
crates/braid-core/: Cargo.toml
crates/braid-core/src/: amdoc.rs  domain.rs  id.rs  lib.rs  schema.rs  time.rs
crates/braid-core/tests/: domain.rs  idgen.rs  merge.rs  roundtrip.rs
crates/braid-viewer/: .gitignore  CLAUDE.md  Cargo.toml  tauri.conf.json
crates/braid-viewer/capabilities/: default.json
crates/braid-viewer/icons/: icon.icns
crates/braid-viewer/src/: csp.rs  lib.rs  main.rs
crates/braid/src/: agents-info.md  cache.rs  commands.rs  config.rs  import.rs  lib.rs  main.rs  mcp.rs  ops.rs  skein.rs  sync.rs  tracker.rs  ui.rs  ws.rs
crates/braid/tests/: agents_info.rs  bootstrap_sh.rs  cache.rs  cli.rs  config.rs  config_cli.rs  defer_cli.rs  delete_cli.rs  deps_cli.rs  docs_drift.rs  format_cli.rs  import_export.rs  installer.rs  issue_ops.rs  mcp_cli.rs  rotate.rs  schema_contract.rs  search_cli.rs  secret_hygiene.rs  sync.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
crates/xtask/tests/: cli.rs
docs/: SUMMARY.md  configuration.md  development.md  installation.md  introduction.md  mcp.md  migrating.md  quick-start.md  rotation.md  security.md  syncing.md  terminology.md  viewer.md  web-ui.md
docs/schemas/: README.md  strand.schema.json
packaging/scoop/: README.md  braid.json
ui/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/src/: App.css  App.tsx  App.viewer.test.tsx  main.tsx
ui/src/components/: ConnectedApp.test.tsx  ConnectedApp.tsx  DepthCard.tsx  ErrorBoundary.tsx  NewStrandDialog.tsx  Stage.tsx  StatusGroup.tsx  StrandCard.tsx  StrandDetail.tsx  StrandList.tsx
ui/src/hooks/: useSkein.ts
ui/src/test/: setup.ts
ui/src/types/: braid.ts
