[workspace]
members = ["crates/braid-core", "crates/braid"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cscheid/braid"

# automerge is 10-100x slower unoptimized (per-character text ops); keep it
# optimized even in dev builds so tests and debug binaries stay usable.
[profile.dev.package.automerge]
opt-level = 3

[workspace.dependencies]
automerge = "0.9.0"
samod = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "net", "time"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
