[workspace]
members = [
    "crates/braid-core",
    "crates/braid-config",
    "crates/braid",
    "crates/xtask",
    "crates/braid-viewer",
]
# braid-viewer excluded from default-members: Tauri can't build on musl.
# Build it explicitly with `-p braid-viewer` or `cargo xtask viewer-*`.
default-members = ["crates/braid-core", "crates/braid-config", "crates/braid", "crates/xtask"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cscheid/braid"

# automerge is 10-100x slower unoptimized (per-character text ops); keep it
# optimized even in dev builds so tests and debug binaries stay usable.
[profile.dev.package.automerge]
opt-level = 3

# Release binaries are shipped via install.sh; strip symbols to keep the
# download small (backtraces still resolve to function names via panic
# messages, and debug builds remain fully symbolicated).
[profile.release]
strip = true

[workspace.dependencies]
braid-config = { path = "crates/braid-config" }
automerge = "0.9.0"
samod = "0.10.0"
axum = "0.8"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "net", "time"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
# default-features off: crates/braid enables exactly the features it uses.
tokio-tungstenite = { version = "0.27", default-features = false }
# default-features off to drop aws-lc-rs; ring is enabled instead (see
# crates/braid/Cargo.toml for rationale).
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }


