[package]
name = "braid-core"
description = "Schema, hydrate/reconcile, and domain logic for braid, an automerge-centric issue tracker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
automerge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
