[package]
name = "braid"
description = "braid: an automerge-centric issue tracker for LLM agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "braid"
path = "src/main.rs"

[dependencies]
braid-core = { path = "../braid-core" }
automerge = { workspace = true }
samod = { workspace = true, features = ["tokio", "tungstenite"] }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
