[package]
name = "braid"
description = "braid: an automerge-centric issue tracker for LLM agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "braid"
path = "src/main.rs"

[dependencies]
braid-core = { path = "../braid-core" }
automerge = { workspace = true }
# No "tungstenite" feature: it hardcodes native-tls → OpenSSL on Linux,
# breaking static musl release builds. src/ws.rs provides the websocket
# dialer instead, over rustls (br-f3b18xoa).
samod = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }
futures = { workspace = true }
# "connect" + rustls for the dialer (src/ws.rs); "handshake" also covers
# the accept side of the tests' in-process ws server. webpki roots are
# compiled in so static binaries work without a system cert store.
tokio-tungstenite = { workspace = true, features = [
    "connect",
    "handshake",
    "rustls-tls-webpki-roots",
] }
# tungstenite leaves rustls's crypto-provider choice to us; ring (rather
# than the default aws-lc-rs) cross-compiles cleanly to musl and builds
# everywhere without cmake.
rustls = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
toml = "0.8"
rmcp = { version = "1.7.0", default-features = false, features = ["server", "transport-io"] }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
jsonschema = { version = "0.46", default-features = false }
